--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.exacode.example</groupId>
-    <artifactId>maven-executable-jar-example</artifactId>
+    <groupId>org.cocktailmolotov.partyplanner</groupId>
+    <artifactId>partyplanner</artifactId>
     <packaging>jar</packaging>
     <name>partyplanner</name>
     <version>0.0.1-SNAPSHOT</version>
@@ -16,6 +16,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
